--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -4,34 +4,38 @@
     padding: 0 $outer-spacing-sm;
     color: $main-dark;
 
+    &__container {
+        padding: 10vh 0 4vh;
+    }
+
     &__title {
         @include roboto-bold-33;
-        margin-bottom: 3.5rem;
+    }
+
+    &__info {
+        margin: 6vh 0
     }
 
     &__type {
         @include roboto-bold-16;
         opacity: .5;
-        margin-bottom: .5rem;
+        margin-bottom: .3rem
     }
 
     &__item {
         @include roboto-bold-20;
         color: $main-dark;
         display: block;
-        margin-bottom: 3rem;
+        margin-bottom: 1.5rem;
     }
 
     &__icon {
-        height: 33px;
-        width: auto;
-        margin-right: 20px;
-        margin-bottom: 10vh;
+        width: 30px;
+        height: auto;
     }
 
     &__copyright {
         @include roboto-regular-16;
-        margin-bottom: 30px;
         a {
             font-weight: 700;
             color: $main-dark;
